# mypylogger

./: .bandit  .envrc  .flake8  .github-monitor.yml  .gitignore  .pre-commit-config.yaml  .quality-config.yml  .safety-policy.yml  BADGE_MIGRATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_LATEST.md  CONTRIBUTING.md  LICENSE  Makefile  PERMISSIONS.md  PYPI_OWNERSHIP_VERIFICATION.md  README copy.md  README.md  README.md.backup  SECURITY.md  SESSION_TRANSFER_PHASE_7A.md  TASK_0_COMPLETION_SUMMARY.md  TESTING.md  USAGE.md  VULNERABILITIES.md  YAML_FIX_PHASE_REMOVAL_SUMMARY.md  all_remaining_errors.txt  all_tests_results.txt  analyze_perf_badge.sh  bandit-ci-results.json  benchmark.json  branch-protection-test-report.json  ci-cd-test-report.json  cleanup_commit.txt  cleanup_imports.txt  cleanup_tests.txt  codeql_analyses.json  complete_error_analysis.txt  complete_test_results.txt  comprehensive_test_results.txt  (+143 more)
.github/: ADVANCED_CACHING_SYSTEM.md  AWS_OIDC_SETUP.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_SETUP.md  CODEOWNERS  MONITORING_SYSTEM.md  PUBLISHING.md  README-BRANCH-PROTECTION.md  SECURITY.md  SECURITY_CONFIG.yml  WORKFLOW_CONFIG.md  WORKFLOW_TESTING_GUIDE.md  WORKFLOW_VALIDATION_GUIDE.md  branch-protection-config.json  cache-optimization-config.yml  dependabot.yml  pull_request_template.md  workflow-trigger.txt
.kiro/: CURRENT_TASKS.md  PROJECT_STATE.md  PROJECT_STATUS.md  kiro_faq.md
.version_backup/: README.md  __init__.py  ci_security_check.sh  custom-dict.txt  design.md  development-workflow.md  feature-control.md  product.md  pyproject.toml  quality-config.yml  requirements.md  run_tests.sh  security_check.sh  tasks.md  tech.md  test_benchmarks.py  test_core.py  test_public_api.py  validate_documentation.py  validate_performance.py
ai_startup/: ai_session_initialization_script.md  session_transfewr.md
badge-data/: performance-badge.json  performance-summary.json
badges/: CI_WORKFLOW.md  CONFIGURATION.md  EXAMPLES.md  README.md  __init__.py  __main__.py  config.py  dynamic_badges.py  generator.py  github_pages.py  live_status.py  monitoring.py  security.py  status.py  updater.py
docs/: AWS_OIDC_TESTING.md  BADGE_CONFIGURATION.md  BADGE_EXTENSION_GUIDE.md  BADGE_MANAGEMENT.md  BADGE_TROUBLESHOOTING.md  CREDENTIAL_SECURITY.md  DATE_FORMAT_STANDARDS.md  DOCUMENTATION_MAINTENANCE_CHECKLIST.md  FAQ.md  FEATURES.md  GITHUB_ACTION_MONITORING.md  GITHUB_TOKEN_SETUP.md  Makefile  OPERATIONAL_RUNBOOK.md  PERFORMANCE.md  PERFORMANCE_BADGES.md  PHASE_7_PYPI_PUBLISHING.md  README.md  SECURITY.md  TROUBLESHOOTING.md  WINDOWS_PERFORMANCE_BADGE_FRAMEWORK.md  WORKFLOW_EXAMPLES.md  custom-dict.txt  quality-config.yml  quality-report-template.md  requirements.txt  test-coverage-results.md
examples/: README.md  __init__.py  basic_usage.py  cli_demo.py  development_mode.py  development_mode.py.backup  environment_variations.py  production_mode.py
infrastructure/: DEPLOYMENT.md  README.md
metrics/: publishing_stats.json  workflow-manual-release-20251026-132404.json  workflow-manual-release-20251026-132741.json  workflow-manual-release-20251026-132821.json  workflow-manual-release-20251026-132842.json  workflow-manual-release-20251026-132851.json  workflow-manual-release-20251026-132904.json  workflow-manual-release-20251026-133046.json  workflow-manual-release-20251026-133128.json  workflow-manual-release-20251026-133149.json  workflow-manual-release-20251026-133159.json  workflow-manual-release-20251026-133213.json  workflow-manual-release-20251026-133551.json  workflow-manual-release-20251026-133850.json  workflow-manual-release-20251026-133918.json  workflow-manual-release-20251026-134013.json  workflow-manual-release-20251026-134240.json  workflow-manual-release-20251026-134337.json  workflow-manual-release-20251026-134556.json  workflow-manual-release-20251026-134656.json  workflow-manual-release-20251026-134921.json  workflow-manual-release-20251026-135023.json  workflow-manual-release-20251026-135359.json  workflow-manual-release-20251026-135503.json  workflow-manual-release-20251026-135727.json  workflow-manual-release-20251026-135833.json  workflow-manual-release-20251026-140058.json  workflow-manual-release-20251026-140206.json  workflow-manual-release-20251026-140530.json  workflow-manual-release-20251026-140641.json  workflow-manual-release-20251026-140849.json  workflow-manual-release-20251026-141003.json  workflow-manual-release-20251026-141245.json  workflow-manual-release-20251026-141358.json  workflow-manual-release-20251026-160536.json  workflow-manual-release-20251026-160602.json  workflow-manual-release-20251026-160819.json  workflow-security-driven-release-20251026-132349.json  workflow-security-driven-release-20251026-132402.json  workflow-security-driven-release-20251026-132729.json  (+205 more)
mypylogger/: __init__.py  config.py  core.py  formatters.py  handlers.py
scripts/: __init__.py  aws_auth_retry.py  badge_health_monitor.py  build_docs.sh  check-environment.sh  ci_security_check.sh  cicd_error_handler.py  cicd_monitoring.py  credential_security_validator.py  deployment_validator.py  final_validation.py  fix-formatting.sh  generate-changelog.py  generate_changelog.py  generate_docs_badges.py  generate_performance_badge.py  github_api_client.py  github_cache_manager.py  github_data_models.py  github_help_system.py  github_intelligent_polling.py  github_monitor_config.py  github_monitor_exceptions.py  github_pipeline_monitor.py  github_status_reporter.py  integration_orchestrator.py  measure_performance.py  notify_publishing_failure.py  oidc_credential_manager.py  pre-commit-branch-check.sh  pre-release-check.sh  prepare_release.py  publish_with_error_handling.py  publishing_error_handler.py  quick_push.sh  release_automation_engine.py  release_notes_generator.py  repair_yaml.py  resolve_security_conflicts.sh  run-complete-test-suite.sh  (+35 more)
security/: DEPLOYMENT.md  MODULE_VALIDATION.md  README.md  __init__.py  compliance.py  error_handling.py  generator.py  history.py  models.py  monitoring.py  parsers.py  (+2 more)
security-reports/: bandit-20251024_143423.json
(+361 files in other folders)
